--- a/package.json
+++ b/package.json
@@ -10,17 +10,26 @@
     "@types/node": "^16.18.16",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "framer-motion": "^10.12.7",
+    "phosphor-react": "^1.4.1",
     "react": "^18.2.0",
+    "react-breakpoints-hook": "^0.1.2",
     "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10",
+    "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-text-transition": "^3.1.0",
+    "sass": "^1.59.3",
     "typescript": "^4.9.5",
+    "use-breakpoint": "^3.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "yarn build && firebase deploy --only hosting"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.7"
   }
 }
